--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,7 +7,7 @@
 <img src="img/nodejs_logo.png" alt="Logo">
 <h1><%= title %></h1>
 
-<form method = "post">
+<form method = "post" action="/login">
 
 	<input type="text" size="30" placeholder="Enter your user name" name="username"><br />
 	<input type="password" size="30" placeholder="Enter your password" name="password"><br />
