Added formatting for pages.

--- a/app/views/feedback.ejs
+++ b/app/views/feedback.ejs
@@ -9,7 +9,12 @@
 
 <form method="post">
 
-    <input type="text" name="email" value="<%= email %>"/>
+    <input type="text" placeholder="Enter your user email" name="email" value="<%= email %>"/>
+    <br />
+    <br />
+    <textarea placeholder="Enter your user feedback" name="feedback"></textarea>
+    <br />
+    <br />
     <input type="submit" value="Submit" name="submit">
 
 </form>
