--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -9,8 +9,12 @@
 
 <form method="post" action="/login">
 
-    <input type="text" size="30" placeholder="Enter your user name" name="username"><br/>
-    <input type="password" size="30" placeholder="Enter your password" name="password"><br/>
+    <input type="text" size="30" placeholder="Enter your user name" name="username">
+    <br/>
+    <br/>
+    <input type="password" size="30" placeholder="Enter your password" name="password">
+    <br/>
+    <br/>
     <input type="submit" value="Submit" name="submit">
 
 </form>
