Added info passing through pages to thank you

--- a/app/views/thankyou.ejs
+++ b/app/views/thankyou.ejs
@@ -6,7 +6,9 @@
 <body>
 <h1><%= title %></h1>
 
-<h2>Thank you for completing feedback form!</h2>
+<h2>Thank you <%= username %>> for completing feedback form!</h2>
+<p>Your email - <%= email %></p>
+<p>Your feedback - <%= feedback %></p>
 
 </body>
 
