--- a/app/views/feedback.ejs
+++ b/app/views/feedback.ejs
@@ -12,7 +12,7 @@
     <input type="text" placeholder="Enter your user email" name="email" value="<%= email %>"/>
     <br />
     <br />
-    <textarea placeholder="Enter your user feedback" name="feedback"></textarea>
+    <input type="text" placeholder="Enter your user feedback" name="feedback" value="<%= feedback %>"/>
     <br />
     <br />
     <input type="submit" value="Submit" name="submit">
