--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,22 +2,24 @@
 <html>
 <head>
     <title><%= title %></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<img src="img/nodejs_logo.png" alt="Logo">
-<h1><%= title %></h1>
+<img src="img/login.jpg" alt="Logo">
 
-<form method="post" action="/login">
+<div class="container">
+    <form method="post" action="/login">
 
-    <input type="text" size="30" placeholder="Enter your user name" name="username">
-    <br/>
-    <br/>
-    <input type="password" size="30" placeholder="Enter your password" name="password">
-    <br/>
-    <br/>
-    <input type="submit" value="Submit" name="submit">
+        <input type="text" size="30" placeholder="Enter your user name" name="username" class="input-group-text">
+        <br/>
+        <br/>
+        <input type="password" size="30" placeholder="Enter your password" name="password" class="input-group-text">
+        <br/>
+        <br/>
+        <input type="submit" value="Submit" name="submit" class="btn-success">
 
-</form>
+    </form>
+</div>
 
 </body>
 
