--- a/app/views/thankyou.ejs
+++ b/app/views/thankyou.ejs
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title><%= title %></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<h1><%= title %></h1>
+<img src="img/thankyou.png" alt="Logo">
 
 <h2>Thank you <%= username %>> for completing feedback form!</h2>
 <p>Your email - <%= email %></p>
