--- a/app/views/feedback.ejs
+++ b/app/views/feedback.ejs
@@ -2,20 +2,25 @@
 <html>
 <head>
     <title><%= title %></title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<img src="img/feedback.jpeg" alt="Logo">
+<img src="img/feedback.jpeg" alt="feedback">
 
-<form method="post">
+<div class="container">
+    <form method="post">
 
-    <input type="text" placeholder="Enter your user email" name="email" value="<%= email %>" class="input-group"/>
-    <br />
-    <input type="text" placeholder="Enter your user feedback" name="feedback" value="<%= feedback %>" class="input-group"/>
-    <br />
-    <input type="submit" value="Submit" name="submit" class="btn-success">
+        <input type="text" placeholder="Enter your user email" name="email" value="<%= email %>"
+               class="input-group-text"/>
+        <br/>
+        <input type="text" placeholder="Enter your user feedback" name="feedback" value="<%= feedback %>"
+               class="input-group-text"/>
+        <br/>
+        <input type="submit" value="Submit" name="submit" class="btn-success">
 
-</form>
+    </form>
+</div>
 
 </body>
 
