--- a/app/views/thankyou.ejs
+++ b/app/views/thankyou.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<img src="img/thankyou.png" alt="Logo">
+<img src="img/thankyou.png" alt="thankyou">
 
 <h2>Thank you <%= username %>> for completing feedback form!</h2>
 <p>Your email - <%= email %></p>
