Updated the index page look.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,20 +5,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<img src="img/login.jpg" alt="Logo">
+<div>
+    <img src="img/login.jpg" alt="Logo">
 
-<div class="container">
-    <form method="post" action="/login">
+    <div class="container">
+        <form method="post" action="/login">
 
-        <input type="text" size="30" placeholder="Enter your user name" name="username" class="input-group-text">
-        <br/>
-        <input type="password" size="30" placeholder="Enter your password" name="password" class="input-group-text">
-        <br/>
-        <input type="submit" value="Submit" name="submit" class="btn-success">
+            <input type="text" size="30" placeholder="Enter your user name" name="username" class="input-group-text">
+            <br/>
+            <input type="password" size="30" placeholder="Enter your password" name="password" class="input-group-text">
+            <br/>
+            <input type="submit" value="Submit" name="submit" class="btn btn-success">
 
-    </form>
+        </form>
+    </div>
+
 </div>
-
 </body>
 
 </html>
