--- a/app/views/thankyou.ejs
+++ b/app/views/thankyou.ejs
@@ -7,7 +7,7 @@
 <body>
 <img src="img/thankyou.png" alt="thankyou">
 
-<h2>Thank you <%= username %>> for completing feedback form!</h2>
+<h2>Thank you <%= username %> for completing feedback form!</h2>
 <p>Your email - <%= email %></p>
 <p>Your feedback - <%= feedback %></p>
 
