Updated feedback page. Removed redundant styles.

--- a/app/views/feedback.ejs
+++ b/app/views/feedback.ejs
@@ -11,19 +11,19 @@
     <form method="post">
         <table class="table table-light">
             <tr>
-                <td class="flex-column">
+                <td>
                     <label>First name:</label>
                 </td>
-                <td class="tab">
+                <td>
                     <input type="text" name="fname"/>
                 </td>
             </tr>
 
             <tr>
-                <td class="flex-column">
+                <td>
                     <label>Last name:</label>
                 </td>
-                <td class="tab">
+                <td>
                     <input type="text" name="lname"/>
                 </td>
             </tr>
@@ -42,7 +42,7 @@
                     <label >Favourite flower:</label>
                 </td>
                 <td>
-                    <input type="text" name="flower"/>
+                    <input type="text" name="fflower"/>
                 </td>
             </tr>
 
@@ -51,7 +51,7 @@
                     <label >Favourite pizza type:</label>
                 </td>
                 <td>
-                    <input type="text" name="pizza"/>
+                    <input type="text" name="fpizza"/>
                 </td>
             </tr>
 
