Updated thank you page. Set more info on page.

--- a/app/views/thankyou.ejs
+++ b/app/views/thankyou.ejs
@@ -6,10 +6,13 @@
 </head>
 <body>
 <img src="img/thankyou.png" alt="thankyou">
+<div>
+    <h2>Thank you <%= fname %> <%= lname %> for completing feedback form!</h2>
 
-<h2>Thank you <%= username %> for completing feedback form!</h2>
-<p>Your email - <%= email %></p>
-<p>Your feedback - <%= feedback %></p>
+    <p>Your favourite flower - <%= fflower %></p>
+    <p>Your favourite pizza - <%= fpizza %></p>
+    <p>Your feedback - <%= feedback %></p>
+</div>
 
 </body>
 
