--- a/app/views/feedback.ejs
+++ b/app/views/feedback.ejs
@@ -36,7 +36,7 @@
                     <label for="username" class="cols-sm-2 control-label">First name</label>
                     <div class="cols-sm-10">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" name="fname" id="fname"
                                    placeholder="Enter your first name"/>
                         </div>
@@ -47,7 +47,7 @@
                     <label for="username" class="cols-sm-2 control-label">Last name</label>
                     <div class="cols-sm-10">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" name="lname" id="lname"
                                    placeholder="Enter your last name"/>
                         </div>
@@ -58,7 +58,7 @@
                     <label for="username" class="cols-sm-2 control-label">Email</label>
                     <div class="cols-sm-10">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" name="email" id="email"
                                    value="<%= email %>"/>
                         </div>
@@ -69,7 +69,7 @@
                     <label for="username" class="cols-sm-2 control-label">Favourite flower</label>
                     <div class="cols-sm-10">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-leaf" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" name="fflower" id="fflower"
                                    placeholder="Enter your favourite flower"/>
                         </div>
@@ -80,7 +80,7 @@
                     <label for="username" class="cols-sm-2 control-label">Favourite pizza type</label>
                     <div class="cols-sm-10">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-record" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" name="fpizza" id="fpizza"
                                    placeholder="Enter your favourite pizza type"/>
                         </div>
@@ -91,7 +91,7 @@
                     <label for="username" class="cols-sm-2 control-label">Your Feedback</label>
                     <div class="cols-sm-10">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-pencil" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" name="feedback" id="feedback"
                                    placeholder="Enter your favourite pizza type"/>
                         </div>
