--- a/app/views/feedback.ejs
+++ b/app/views/feedback.ejs
@@ -92,14 +92,14 @@
                     <div class="cols-sm-10">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-pencil" aria-hidden="true"></i></span>
-                            <input type="text" class="form-control" name="feedback" id="feedback"
-                                   placeholder="Enter your favourite pizza type"/>
+                            <textarea class="form-control" name="feedback" id="feedback"
+                                   placeholder="Enter your favourite pizza type"></textarea>
                         </div>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" name="submit" class="btn btn-primary btn-lg btn-block login-button">Submit
+                    <button type="submit" name="submit" class="btn btn-primary btn-lg btn-block btn-success">Submit
                     </button>
                 </div>
             </form>
