--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" name="submit" class="btn btn-primary btn-lg btn-block login-button">Submit
+                    <button type="submit" name="submit" class="btn btn-primary btn-lg btn-block btn-success">Login
                     </button>
                 </div>
             </form>
