Added a link to registration on login page.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -58,6 +58,10 @@
                     <button type="submit" name="submit" class="btn btn-primary btn-lg btn-block btn-success">Login
                     </button>
                 </div>
+                <div class="login-register">
+                    <a href="register">Register</a>
+                </div>
+            </form>
             </form>
         </div>
     </div>
