--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="main-login main-center">
-            <form class="form-horizontal" method="post" action="/login">
+            <form class="form-horizontal" method="post" action="/register">
 
                 <div class="form-group">
                     <label for="username" class="cols-sm-2 control-label">First name</label>
@@ -61,6 +61,17 @@
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" name="email" id="email"
                                    placeholder="Enter your last email"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="username" class="cols-sm-2 control-label">Username</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i></span>
+                            <input type="text" class="form-control" name="username" id="username"
+                                   placeholder="Enter your last username"/>
                         </div>
                     </div>
                 </div>
