--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -37,7 +37,7 @@
                     <div class="cols-sm-10">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user" aria-hidden="true"></i></span>
-                            <input type="text" class="form-control" name="fname" id="fname"
+                            <input type="text" class="form-control" name="firstName" id="firstName"
                                    placeholder="Enter your first name"/>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                     <div class="cols-sm-10">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user" aria-hidden="true"></i></span>
-                            <input type="text" class="form-control" name="lname" id="lname"
+                            <input type="text" class="form-control" name="lastName" id="lastName"
                                    placeholder="Enter your last name"/>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                     <label for="username" class="cols-sm-2 control-label">Username</label>
                     <div class="cols-sm-10">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i></span>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" name="username" id="username"
                                    placeholder="Enter your last username"/>
                         </div>
