Changed the actions for submitting the feedback.

--- a/app/views/feedback.ejs
+++ b/app/views/feedback.ejs
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="main-login main-center">
-            <form class="form-horizontal" method="post">
+            <form class="form-horizontal" method="post" action="/thankyou">
 
                 <div class="form-group">
                     <label for="username" class="cols-sm-2 control-label">Favourite flower</label>
