--- a/app/views/responses.ejs
+++ b/app/views/responses.ejs
@@ -27,23 +27,22 @@
                 <h3></h3>
             </div>
         </div>
+
         <div class="main-login main-center">
             <table border="1" cellpadding="7" cellspacing="7">
                 <tr>
                     <th width="50px">No</th>
-                    <th>Username</th>
                     <th>Feedback</th>
                     <th>Favourite flower</th>
                     <th>Favourite pizza</th>
                 </tr>
                 <% if(feedback.length){
-                for(var i = 0;i < data.length;i++) { %>
+                for(var i = 0; i < feedback.length; i++) { %>
                 <tr>
-                    <td><%=(i+1)%></td>
-                    <td><%=feedback[i].username%></td>
-                    <td><%=feedback[i].feedback%></td>
-                    <td><%=feedback[i].fflower%></td>
-                    <td><%=feedback[i].fpizza%></td>
+                    <td><%= (i+1)%></td>
+                    <td><%= feedback[i].feedback %></td>
+                    <td><%= feedback[i].fflower %></td>
+                    <td><%= feedback[i].fpizza %></td>
                 </tr>
                 <% }
                 }else{ %>
